--- a/index.html
+++ b/index.html
@@ -4,34 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Questionário divertido e interativo para testar seu conhecimento.">
-    <meta name="keywords" content="questionário, curiosidades, quiz, aprendizado">
     <link rel="stylesheet" href="style.css">
-    <title>Questionário Você Sabia?</title>
+    <title>>Questionário F1?</title> <!-- texto do cabeçalho -->
 </head>
+<!-- corpo da caixa -->
 
 <body>
-    <!-- Fundo de vídeo com loop e sem som -->
-    <video autoplay muted loop preload="auto" id="video-background">
-        <source src="movie/mslug2-video.mp4" type="video/mp4">
-        Seu navegador não suporta vídeos HTML5.
-    </video>
-
-    <!-- Caixa principal do questionário -->
     <div class="caixa-principal">
-        <img src="image/imagen vc sabia.webp" alt="Imagem você sabia" width="200" height="200" />
-        <h1>Questionário Você Sabia?</h1> <!-- Texto da caixa de título -->
-       
-        <!-- Elementos que receberão o conteúdo do JavaScript -->
+        <img src="mclaren.jpg" alt="senna" width="300" height="200">
+        <h1>Questionário F1?</h1> <!--texto da Questionário caixa -->
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
     </div>
-
-    <!-- Caixa para exibir o resultado -->
     <div class="caixa-resultado">
         <p class="texto-resultado"></p>
     </div>
-<!-- Script do questionário -->
     <script src="script.js"></script>
 </body>
 
