--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>>Questionário F1?</title> <!-- texto do cabeçalho -->
+    <title>Questionário F1</title>
 </head>
-<!-- corpo da caixa -->
-
 <body>
     <div class="caixa-principal">
         <img src="mclaren.jpg" alt="senna" width="300" height="200">
-        <h1>Questionário F1?</h1> <!--texto da Questionário caixa -->
+        <h1>Questionário F1</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
     </div>
@@ -21,5 +18,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
